--- a/clase19/src/views/login.handlebars
+++ b/clase19/src/views/login.handlebars
@@ -10,4 +10,8 @@
   <button type="submit">Iniciar sesión</button>
 </form>
 
+<br>
+
+<a href="forgotPassword">Restaurarar contraseña</a>
+
 <script src="/js/login.js"></script>
