--- a/clase21/src/views/login.handlebars
+++ b/clase21/src/views/login.handlebars
@@ -21,5 +21,11 @@
 <div>
   <a href="/auth/github"><button>Ingresar con GitHub</button></a>
 </div>
+<br>
+<br>
+
+<div>
+  <a href="/auth/google"><button>Ingresar con Google</button></a>
+</div>
 
 <script src="/js/login.js"></script>
